# HRM

./: README.md  pyproject.toml  runhrm.py
HRM/: __init__.py  hrm.py  hrm_with_act.py
tests/: test_hrm.py
