[project]
name = "HRM-pytorch"
version = "0.0.19"
description = "The proposal from a Singaporean AGI company"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'fast slow thinking',
    'adaptive computation time'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "adam-atan2-pytorch",
    "einx>=0.3.0",
    "einops>=0.8.0",
    "torch>=2.0",
    "x-transformers>=2.5.0"
]

[project.urls]
Homepage = "https://pypi.org/project/HRM-pytorch/"
Repository = "https://github.com/lucidrains/hrm"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["HRM"]
